add isproduction to apiconfig and remove extra api calls
