# src/Dorc.Api/Controllers/MetadataController.cs
@@ -33,18 +33,5 @@ namespace Dorc.Api.Controllers
 
             return Results.Ok(envAndVersion);
         }
-
-        /// <summary>
-        /// Get whether this is a production instance
-        /// </summary>
-        /// <returns></returns>
-        [SwaggerResponse(StatusCodes.Status200OK, Type = typeof(bool))]
-        [HttpGet("IsProduction")]
-        public IResult GetIsProduction()
-        {
-            var isProduction = new ConfigurationBuilder().AddJsonFile("appsettings.json").Build().GetSection("AppSettings")["IsProduction"];
-            var result = string.Equals(isProduction, "true", StringComparison.OrdinalIgnoreCase);
-            return Results.Ok(result);
-        }
     }
 }
